--- a/lecture-notes/euclidean-algorithm.ipynb
+++ b/lecture-notes/euclidean-algorithm.ipynb
@@ -215,9 +215,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 10.8",
-   "language": "sage",
-   "name": "sagemath-10.8"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
