Changed html formatting in the script to convert jupyter notebooks to html pages. Updated the lectures notes.

--- a/lecture-notes/divisibility-and-gcd.ipynb
+++ b/lecture-notes/divisibility-and-gcd.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Divisibility and Greatest Common Divisors\n",
     "\n",
-    "**Math 304: Number Theory - Spring 2026**\n",
+    "_Math 304: Number Theory - Spring 2026_\n",
     "\n",
-    "This notebook explores the fundamental concepts of divisibility and greatest common divisors in the integers."
+    "This notebook explores the concepts of divisibility and greatest common divisors in the integers."
    ]
   },
   {
@@ -103,8 +103,7 @@
    "id": "c3259a1e",
    "metadata": {},
    "source": [
-    "# Division in the Integers\n",
-    "\n",
+    "### Division in the Integers\n",
     "If $a, b$ are integers with $b \\neq 0$, there are *unique* integers $q, r$ such that:\n",
     "\n",
     "1. $a = bq + r$\n",
@@ -226,7 +225,7 @@
    "id": "5b0f9081",
    "metadata": {},
    "source": [
-    "## 2. Greatest Common Divisor (GCD)\n",
+    "## 3. Greatest Common Divisor (GCD)\n",
     "\n",
     "### Definition\n",
     "\n",
