Updated euclidean-algorithm lectures notes, updated course schedule

--- a/lecture-notes/euclidean-algorithm.ipynb
+++ b/lecture-notes/euclidean-algorithm.ipynb
@@ -5,7 +5,19 @@
    "id": "82344021",
    "metadata": {},
    "source": [
-    "## Algorithms for finding the GCD\n",
+    "# Greatest Common Divsor And Linear Diophantine Equations\n",
+    "\n",
+    "_Math 304: Number Theory - Spring 2026_\n",
+    "\n",
+    "This notebook explores how to compute greatest common divisors and solve linear diophantine equations in the integers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e960a6f",
+   "metadata": {},
+   "source": [
+    "## Algorithms For Finding The GCD\n",
     "\n",
     "### Listing All Divisors\n",
     "To find the greatest common divisor (GCD) of two numbers, one naive method is to list all divisors of each number and find the largest common divisor. For example:"
@@ -92,7 +104,15 @@
     "3. Repeat until the remainder is zero. The last non-zero remainder is the GCD.\n",
     "\n",
     "### Example\n",
-    "Find the GCD of 48 and 18 using the Euclidean algorithm. "
+    "Find the GCD of 48 and 20 using the Euclidean algorithm.\n",
+    "\n",
+    "We apply the division algorithm repeatedly:\n",
+    "\n",
+    "$$48 = 20 \\cdot 2 + 8$$\n",
+    "$$20 = 8 \\cdot 2 + 4$$\n",
+    "$$8 = 4 \\cdot 2 + 0$$\n",
+    "\n",
+    "The last non-zero remainder is $4$, so $\\gcd(48, 20) = 4$."
    ]
   },
   {
@@ -128,35 +148,43 @@
     "\n",
     "\n",
     "## Comparing Runtime: Factorization vs Euclidean Algorithm\n",
-    "The following code compares the runtime of the naive factorization method and the Euclidean algorithm for large integers:"
+    "When we have large integers, it can take quite a while to factor them. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5c6c8db0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'gcd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m n = \u001b[32m306859557335763324403448444069903908987961835806843044243\u001b[39m \n\u001b[32m      2\u001b[39m m = \u001b[32m3137761082682763502441065262992475630332367765985493228\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mgcd\u001b[49m(n,m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'gcd' is not defined"
+     ]
     }
    ],
    "source": [
-    "n = 901428039487 \n",
-    "m = 5647721113483\n",
-    "gcd(n,m)"
+    "n = 306859557335763324403448444069903908987961835806843044243 \n",
+    "factor(n)  # This will take a while!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb920647",
+   "metadata": {},
+   "source": [
+    "However, we can still find the gcd efficiently!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f08c9adf",
    "metadata": {},
    "outputs": [
@@ -172,45 +200,185 @@
     }
    ],
    "source": [
-    "factor(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "43335cf7-3764-4a09-8b3f-708782238763",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19 * 79 * 3762638983"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factor(m)"
+    "n = 306859557335763324403448444069903908987961835806843044243 \n",
+    "m = 3137761082682763502441065262992475630332367765985493228\n",
+    "gcd(n,m)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8205507c-1cdc-4778-893b-cd2ce2173646",
+   "id": "472dbbad",
    "metadata": {},
    "source": [
-    "The above numbers are small enough that factorization and the Euclidean algorithm both run in about the same time. Try playing around with bigger numbers and see which method is faster in general!"
+    "## Linear Diophantine Equations\n",
+    "\n",
+    "A **linear Diophantine equation** is an equation of the form:\n",
+    "$$ax + by = d$$\n",
+    "where $a, b, d$ are integers and we seek integer solutions for $x$ and $y$.\n",
+    "\n",
+    "A fundamental result is that this equation has integer solutions if and only if $\\gcd(a, b)$ divides $d$.\n",
+    "\n",
+    "### The Extended Euclidean Algorithm\n",
+    "\n",
+    "When we use the Euclidean algorithm to find $\\gcd(a, b)$, we can **back substitute** to express the GCD as a linear combination of $a$ and $b$. This process allows us to solve linear Diophantine equations.\n",
+    "\n",
+    "### Example: Solving $13x + 17y = 1$\n",
+    "\n",
+    "First, we apply the Euclidean algorithm to find $\\gcd(13, 17)$:\n",
+    "\n",
+    "$$17 = 13 \\cdot 1 + 4$$\n",
+    "$$13 = 4 \\cdot 3 + 1$$\n",
+    "$$4 = 1 \\cdot 4 + 0$$\n",
+    "\n",
+    "The GCD is $1$, which divides $1$, so the equation has integer solutions.\n",
+    "\n",
+    "Now we **back substitute** to express $1$ as a linear combination of $13$ and $17$:\n",
+    "\n",
+    "From the second equation:\n",
+    "$$1 = 13 - 4 \\cdot 3$$\n",
+    "\n",
+    "Substitute $4 = 17 - 13 \\cdot 1$ from the first equation:\n",
+    "$$1 = 13 - (17 - 13 \\cdot 1) \\cdot 3$$\n",
+    "$$1 = 13 - 17 \\cdot 3 + 13 \\cdot 3$$\n",
+    "$$1 = 13 \\cdot 4 + 17 \\cdot (-3)$$\n",
+    "\n",
+    "Therefore, one solution is $x = 4$ and $y = -3$.\n",
+    "\n",
+    "We can verify: $13(4) + 17(-3) = 52 - 51 = 1$ ✓"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24f6b4e4-3f1a-4b51-94e4-a2c22b801e2c",
+   "id": "b0ef237d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sage has a built-in function to find the extended GCD\n",
+    "# xgcd returns (g, x, y) where g = gcd(a,b) and g = a*x + b*y\n",
+    "a = 13\n",
+    "b = 17\n",
+    "g, x, y = xgcd(a, b)\n",
+    "print(f\"gcd({a}, {b}) = {g}\")\n",
+    "print(f\"{a} * {x} + {b} * {y} = {g}\")\n",
+    "print(f\"Verification: {a*x + b*y}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a1878f7",
+   "metadata": {},
+   "source": [
+    "### General Solutions\n",
+    "\n",
+    "Once we have one particular solution $(x_0, y_0)$ to $ax + by = d$, we can find all solutions using:\n",
+    "\n",
+    "$$x = x_0 + \\frac{b}{\\gcd(a,b)} \\cdot t$$\n",
+    "$$y = y_0 - \\frac{a}{\\gcd(a,b)} \\cdot t$$\n",
+    "\n",
+    "where $t$ is any integer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26d3685a",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "**Prove** that every solution to the linear Diophantine equation $ax + by = d$ is of the form:\n",
+    "\n",
+    "$$x = x_0 + \\frac{b}{\\gcd(a,b)} \\cdot t$$\n",
+    "$$y = y_0 - \\frac{a}{\\gcd(a,b)} \\cdot t$$\n",
+    "\n",
+    "where $(x_0, y_0)$ is a particular solution and $t$ is any integer.\n",
+    "\n",
+    "*Hint: If $(x_1, y_1)$ is another solution, consider $a(x_1 - x_0) + b(y_1 - y_0)$ and what this equals.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79ef4102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finding multiple solutions to 13x + 17y = 1\n",
+    "a = 13\n",
+    "b = 17\n",
+    "g, x0, y0 = xgcd(a, b)\n",
+    "\n",
+    "print(f\"One particular solution: x = {x0}, y = {y0}\")\n",
+    "print(f\"Verification: {a}*{x0} + {b}*{y0} = {a*x0 + b*y0}\\n\")\n",
+    "\n",
+    "print(\"Other solutions (for different values of t):\")\n",
+    "for t in range(-2, 3):\n",
+    "    x = x0 + (b//g) * t\n",
+    "    y = y0 - (a//g) * t\n",
+    "    print(f\"t = {t:2}: x = {x:3}, y = {y:3}  →  {a}*{x} + {b}*{y} = {a*x + b*y}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e10bd0",
+   "metadata": {},
+   "source": [
+    "## Practice Problem\n",
+    "\n",
+    "1. Solve $84x + 33y = 12$. Then use the following SageCell to verify your answer. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed3a218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solve 84x + 33y = 12\n",
+    "a = 84\n",
+    "b = 33\n",
+    "d = 12\n",
+    "\n",
+    "# First check if solution exists\n",
+    "g, x0, y0 = xgcd(a, b)\n",
+    "print(f\"gcd({a}, {b}) = {g}\")\n",
+    "print(f\"Does {g} divide {d}? {d % g == 0}\")\n",
+    "\n",
+    "if d % g == 0:\n",
+    "    # Scale the solution\n",
+    "    x = x0 * (d // g)\n",
+    "    y = y0 * (d // g)\n",
+    "    print(f\"\\nOne solution: x = {x}, y = {y}\")\n",
+    "    print(f\"Verification: {a}*{x} + {b}*{y} = {a*x + b*y}\")\n",
+    "else:\n",
+    "    print(f\"\\nNo integer solutions exist because {g} does not divide {d}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cf30fa3",
+   "metadata": {},
+   "source": [
+    "2. Pick several different random values of $a,b,d$ and solve the diophantine equation\n",
+    "    $$ ax + by = d$$\n",
+    "Verify your answer in Sage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20f10609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use this SageCell to verify your answer:\n",
+    "from random import randint\n",
+    "\n",
+    "a = randint(1, 100)\n",
+    "b = randint(1, 100)\n",
+    "d = randint(1, 100)"
+   ]
   }
  ],
  "metadata": {
