Add lecture notes on units, order, and Fermat's Little Theorem

--- a/lecture-notes/lecture-note-workflow.ipynb
+++ b/lecture-notes/lecture-note-workflow.ipynb
@@ -13,11 +13,13 @@
     "\n",
     "#### 1. Content Population\n",
     "\n",
+    "Create a new jupyter notebook with the title you want. For example, entering `touch modular-arithmetic.ipynb` in terminal creates a new jupyter notebook for my modular arithmetic lesson. \n",
+    "\n",
     "Use the chat titled **lecture-content** to have GPT-4o populate content based on the topics for the day. Input your instructions via a markdown cell.\n",
     "\n",
     "**Example instructions:**\n",
     "\n",
-    "> Add the following content to the jupyter notebook about divisibility and gcds:\n",
+    "> Following the formatting guidelines in lecture-note-workflow.ipynb, cell 2; add the following content to the jupyter notebook about divisibility and gcds:\n",
     "> \n",
     "> - **Markdown cell**: Definition of divisibility, quotient, remainder of division of integers. Examples.\n",
     "> - **SageMath cell**: Examples using SageMath.\n",
