Add Euler's theorem and Chinese Remainder Theorem lecture notes

--- a/pdf-and-tex-files/midterm_1_alternate.tex
+++ b/pdf-and-tex-files/midterm_1_alternate.tex
@@ -81,7 +81,7 @@ may be no credit given for problems where there is no work shown.
 \end{parts}
 
 \newpage
-\question[10] Let $n$ be a positive integer such that $n^2$ has exactly three positive prime divisors. Prove that $n$ is the square of a prime number.  
+\question[10] Let $n$ be a positive integer such that $n$ has exactly three positive divisors. Prove that $n$ is the square of a prime number.  
 
 \newpage
 \question[10] Prove that if $p>3$ is a prime then $6 \mid (p^2 - 1)$. 
@@ -89,9 +89,9 @@ may be no credit given for problems where there is no work shown.
 \vfill
 
 \newpage
-\question[10] Congruences computation. Let $a, b \in \mathbb{Z}$ and $n \in \mathbb{Z}_{>0}$. Prove or disprove the following statements about congruences modulo $n$. 
+\question[10] 
 \begin{parts}
-    \part Compute $(3^{47} - 25)\%28$, that is, find the integer $x$ with $0 \leq x < 28$ such that $3^{47} - 25 \equiv x \pmod{22}$. 
+    \part Compute $(3^{47} - 25)\%28$, that is, find the integer $x$ with $0 \leq x < 28$ such that $3^{47} - 25 \equiv x \pmod{28}$. 
     \vfill 
 
     \part For which positive integers $n$ is the statement \[ \forall a \in \{1, \ldots, n-1\} \exists x \in \ZZ : ax \equiv 1 \pmod{n}\] true? 
