--- a/pdf-and-tex-files/midterm_1.tex
+++ b/pdf-and-tex-files/midterm_1.tex
@@ -89,7 +89,7 @@ may be no credit given for problems where there is no work shown.
 \vfill
 
 \newpage
-\question[10] Congruences computation. Let $a, b \in \mathbb{Z}$ and $n \in \mathbb{Z}_{>0}$. Prove or disprove the following statements about congruences modulo $n$. 
+\question[10] 
 \begin{parts}
     \part Compute $(3^{43} - 20)\%22$, that is, find the integer $x$ with $0 \leq x < 22$ such that $3^{43} - 20 \equiv x \pmod{22}$. 
     \vfill 
