Link Euler's theorem notes to lecture notes page and Week 6 schedule

--- a/lecture-notes/eulers-theorem-chinese-remainder.ipynb
+++ b/lecture-notes/eulers-theorem-chinese-remainder.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Recall that an element $a \\in \\mathbb{Z}_n$ is a **unit** if there exists $b \\in \\mathbb{Z}_n$ such that $ab \\equiv 1 \\pmod{n}$. We've seen that $a$ is a unit modulo $n$ if and only if $\\gcd(a, n) = 1$.\n",
     "\n",
-    "A natural question arises: **How many units are there modulo $n$?**\n",
+    "A natural question arises: *How many units are there modulo $n$?*\n",
     "\n",
     "This question leads us to one of the most important functions in number theory.\n",
     "\n",
@@ -100,7 +100,7 @@
    "id": "e2d9b742",
    "metadata": {},
    "source": [
-    "One of the most useful properties of Euler's phi function is that it is **multiplicative**.\n",
+    "One of the most useful properties of Euler's phi function is that it is *multiplicative*.\n",
     "\n",
     "<div class=\"theorem\" style=\"border: 1px solid #ccc; padding: 10px; margin: 5px 0; background-color: #f9f9f9; border-radius: 5px; overflow: hidden;\">\n",
     "    <p style=\"font-size: 1.2em; font-weight: bold; margin-top: 10px;\">Theorem (Multiplicativity of $\\varphi$)</p>\n",
